@@ -58,6 +58,9 @@ public final class JwtRequestHeader extends AbstractJwtRequest {
     @SerializedName(ClaimNames.KID)
     private String mKId;
 
+    @SerializedName(ClaimNames.KDF_VER)
+    private int mKdfVersion = 1;
+
     public void setType() {
         mType = JWT_VALUE;
     }
